now it is possible to read the frags and save them.

--- a/clanify-analytics-client/clanify-analytics-client.csproj
+++ b/clanify-analytics-client/clanify-analytics-client.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\TableFrags.cs" />
     <Compile Include="Database\TableMatch.cs" />
     <Compile Include="frmClient.cs">
       <SubType>Form</SubType>
