teams and relationships between teams, players, matches.

--- a/clanify-analytics-client/clanify-analytics-client.csproj
+++ b/clanify-analytics-client/clanify-analytics-client.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Database\TableFrags.cs" />
     <Compile Include="Database\TableMatch.cs" />
     <Compile Include="Database\TablePlayers.cs" />
+    <Compile Include="Database\TableMatchPlayers.cs" />
+    <Compile Include="Database\TableTeams.cs" />
     <Compile Include="frmClient.cs">
       <SubType>Form</SubType>
     </Compile>
