now grenade events saved to the database.

--- a/clanify-analytics-client/clanify-analytics-client.csproj
+++ b/clanify-analytics-client/clanify-analytics-client.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Database\TablePlayers.cs" />
     <Compile Include="Database\TableMatchPlayers.cs" />
     <Compile Include="Database\TableTeams.cs" />
+    <Compile Include="Database\TableWeaponEvents.cs" />
     <Compile Include="frmClient.cs">
       <SubType>Form</SubType>
     </Compile>
