--- a/clanify-analytics-client/clanify-analytics-client.csproj
+++ b/clanify-analytics-client/clanify-analytics-client.csproj
@@ -148,5 +148,11 @@
   <ItemGroup>
     <None Include="Resources\icon-info.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon_open.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon_open1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
