now we can parse rounds, but it is not save!

--- a/clanify-analytics-client/clanify-analytics-client.csproj
+++ b/clanify-analytics-client/clanify-analytics-client.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Database\TableMatch.cs" />
     <Compile Include="Database\TablePlayers.cs" />
     <Compile Include="Database\TableMatchPlayers.cs" />
+    <Compile Include="Database\TableRounds.cs" />
     <Compile Include="Database\TableTeams.cs" />
     <Compile Include="Database\TableWeaponEvents.cs" />
     <Compile Include="frmClient.cs">
